--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "old-design-docs"]
 	path = old-design-docs
 	url = git@github.com:Raku/old-design-docs.git
+[submodule "roast"]
+	path = roast
+	url = git@github.com:Raku/roast.git
