Update roast history (2026-02-18)

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,3 +4,10 @@ pre-commit:
       run: cargo fmt && git add -u
     clippy:
       run: cargo clippy -- -D warnings
+
+pre-push:
+  commands:
+    test:
+      run: make test
+    roast:
+      run: make roast
