--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ num-integer = "0.1"
 unicode-segmentation = "1.12.0"
 unicode-normalization = "0.1"
 rustyline = "15"
+emojis = "0.7"
 
 [profile.release]
 debug = true
