--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ unicode-normalization = "0.1"
 rustyline = "15"
 emojis = "0.7"
 libc = "0.2"
+encoding_rs = "0.8"
 
 [profile.release]
 debug = true
