--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ wasm = ["wasm-bindgen", "console_error_panic_hook"]
 [dependencies]
 regex = "1.12.3"
 fancy-regex = "0.14"
+pcre2 = "0.2"
 unicode_names2 = "2.0.0"
 num-bigint = "0.4"
 num-traits = "0.2"
